--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -39,7 +39,7 @@ html {
   padding: 10px;
 }
 
-#user, #time, #distance, #unload-count {
+#user, #time, #distance, #unload-count, #fuel {
   padding-bottom: 10px;
   color: white;
   font-size: 24px;
