Report now gets its values from API. Also latest scores displayed in profile now actually gets them correctly, latest first. Requires map-score-api branch from db, not working with master

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -11,6 +11,10 @@
 	vertical-align: middle;
 }
 
+ul {
+	list-style-type: none;
+}
+
 #right-content {
 	display:inline-block;
 	background-color: var(--jd-gray);
