--- a/src/components/MapMenu.css
+++ b/src/components/MapMenu.css
@@ -47,7 +47,7 @@
 #fading-content #map-image {
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 100%;
 }
