Add colored log assets, use new log colors

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -104,33 +104,33 @@ html {
 }
 
 .log-type-0 {
-  border: 1px solid #D85040;
-  background-color: #D85040;
+  border: 1px solid #a28569;
+  background-color: #a28569;
 }
 
 .log-type-1 {
-  border: 1px solid #5286EC;
-  background-color: #5286EC;
+  border: 1px solid #e4d73d;
+  background-color: #e4d73d;
 }
 
 .log-type-2 {
-  border: 1px solid #58A55C;
-  background-color: #58A55C;
+  border: 1px solid #f27f1a;
+  background-color: #f27f1a;
 }
 
 .log-type-3 {
-  border: 1px solid #BC8E56;
-  background-color: #BC8E56;
+  border: 1px solid #d85040;
+  background-color: #d85040;
 }
 
 .log-type-4 {
-  border: 1px solid #AD8BFF;
-  background-color: #AD8BFF;
+  border: 1px solid #946fed;
+  background-color: #946fed;
 }
 
 .log-type-5 {
-  border: 1px solid #FF72BE;
-  background-color: #FF72BE;
+  border: 1px solid #2c57c3;
+  background-color: #2c57c3;
 }
 
 .log-load-border {
