--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -237,6 +237,18 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  color:white;
-  font-size: 72px;
+  color:#999;
+  font-size: 18px;
+}
+
+#game-end-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+}
+
+#game-end-menu {
+  margin-right: 200px;
+  display: inline-block;
+  color: #eee;
 }
