Show log amounts on the level in UI, Implement log type hiding control by clicking on the UI (no actual message is sent to the game canvas, todo)

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -62,6 +62,14 @@ html {
   margin-bottom: 10px;
 }
 
+.logs-remaining-count:hover {
+  cursor: pointer;
+}
+
+.logs-remaining-count.disabled {
+  opacity: 0.4;
+}
+
 #log-load-container {
   position: fixed;
   bottom: 20px;
