Implement map loading in editor UI, TODO: load only user's own levels

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -76,6 +76,10 @@
   background-color: var(--jd-gray) !important;
 }
 
+.primary.inactive:hover {
+  background-color: var(--jd-yellow) !important;
+}
+
 .inactive:active {
   filter: none;
 }
