--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -103,22 +103,32 @@ html {
   margin-top: 10px;
 }
 
-#editor-toolbar input {
+.details-weather-checkbox {
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 10px;
+}
+
+.details-weather-setting {
+  margin-left: 45px;
+  margin-right: 45px;
+  margin-top: 5px;
+}
+
+#editor-toolbar input[type="number"] {
   -webkit-appearance: none;
   outline: none;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  width: 40px;
+  width: 80px;
   color: var(--jd-yellow);
   border-bottom: #ccc solid 2px;
   text-align: center;
   font-size: 20px;
 }
 
-#editor-toolbar input[type=number]::-webkit-inner-spin-button, 
-#editor-toolbar input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+.input-illegal {
+  color: #D63232 !important;
 }
 
 #editor-mapmenu {
