--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,8 +3,8 @@
   --jd-gray: #E5E6E6;
   --jd-yellow: #FFDE00;
   --jd-green: #367C2B;
-  --menu-shadow: 2px 2px 5px #444;
-  --menu-shadow-2: 1px 1px 2px #888;
+  --menu-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  --menu-shadow-2: 1px 1px 2px rgba(0, 0, 0, 0.35);
   --navbar-height: 35px;
   --navbar-font-size: 1.3em;
 }
@@ -12,7 +12,7 @@
 body {
   margin: 0;
   font-family: Helvetica, Sans-serif;
-  background-color: #58595b;
+  background-color: #000;
 
   /* Make everything unselectable */
   -webkit-user-select: none; /* Safari */        
