--- a/src/components/MainMenu.css
+++ b/src/components/MainMenu.css
@@ -45,3 +45,50 @@
   bottom: 5%;
   display: flex;
 }
+
+#menu-background {
+  width: 100vw;
+  height: 100vh;
+  z-index: -10;
+  background-image: url("/static/bg.png");
+  background-repeat: repeat;
+  background-size: 300px;
+  position: fixed;
+  -webkit-animation: 200s scroll infinite linear;
+  -moz-animation: 200s scroll infinite linear;
+  -o-animation: 200s scroll infinite linear;
+  -ms-animation: 200s scroll infinite linear;
+  animation: 200s scroll infinite linear;
+  top: 0;
+  left: 0;
+}
+
+@-webkit-keyframes scroll{
+  100%{
+    background-position: 3000px -3000px;
+  }
+}
+
+@-moz-keyframes scroll{
+  100%{
+    background-position: 3000px -3000px;
+  }
+}
+
+@-o-keyframes scroll{
+  100%{
+    background-position: 3000px -3000px;
+  }
+}
+
+@-ms-keyframes scroll{
+  100%{
+    background-position: 3000px -3000px;
+  }
+}
+
+@keyframes scroll{
+  100%{
+    background-position: 3000px -3000px;
+  }
+}
