--- a/src/components/Report.css
+++ b/src/components/Report.css
@@ -1,3 +1,10 @@
+#closeButton {
+	float: right;
+	position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
 #endgame-report {
 	min-width: 250px;
   float: right;
