--- a/src/components/NotificationBox.css
+++ b/src/components/NotificationBox.css
@@ -5,6 +5,8 @@
   margin: 1vw;
   z-index: 999;  
   position: fixed;
+  top: 10px;
+  right: 10px;
   box-shadow: var(--menu-shadow);
   background-color: var(--jd-yellow);
 }
