--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -52,6 +52,18 @@
   color: var(--jd-yellow);
 }
 
+.delete-button {
+  border-radius: 5px;
+  background-color: #D62727;
+  color: rgba(250, 250, 250, 0.8) !important;
+}
+
+.delete-button.inactive {
+  border-radius: 5px;
+  background-color: #D62727;
+  color: rgba(250, 250, 250, 0.5) !important;
+}
+
 .Button:hover {
   cursor: pointer;
   background-color: var(--jd-green) !important;
@@ -82,4 +94,12 @@
 
 .inactive:active {
   filter: none;
+}
+
+.delete-button:hover {
+  background-color: #951B1B !important;
+}
+
+.delete-button:hover.inactive {
+  background-color: #D62727 !important;
 }
