--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -2,8 +2,8 @@
   height: 50px;
   width: 50px;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: calc(50% - 25px);
+  left: calc(50% - 25px);
   z-index: 1;
 }
 
