--- a/src/components/MapMenu.css
+++ b/src/components/MapMenu.css
@@ -33,6 +33,18 @@
   transition: background-color 350ms ease;
 }
 
+.foggy-image-container {
+  background-color: #7F7F7F !important;
+}
+
+.foggy-image {
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  -o-filter: blur(10px);
+  -ms-filter: blur(10px);
+  filter: blur(10px);
+}
+
 #left, #right {
   width: 250px;
   vertical-align: top;
@@ -286,9 +298,9 @@
   padding-bottom: 20px;
 
   /* Gradient background */
-  background: rgba(10, 10, 10, 0.6); /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0)); /* Standard syntax */
+  background: rgba(10, 10, 10, 0.4); /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(rgba(10, 10, 10, 0.4), rgba(10, 10, 10, 0)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(rgba(10, 10, 10, 0.4), rgba(10, 10, 10, 0)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(rgba(10, 10, 10, 0.4), rgba(10, 10, 10, 0)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(rgba(10, 10, 10, 0.4), rgba(10, 10, 10, 0)); /* Standard syntax */
 }
