--- a/src/components/Report.css
+++ b/src/components/Report.css
@@ -13,7 +13,7 @@
 	min-width: 250px;
 	float: right;
 	max-height: 100vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #endgame-report > * {
@@ -22,6 +22,10 @@
 
 #endgame-report span, #report span {
 	float: right;
+}
+
+#detailed-stats {
+	width: 100%;
 }
 
 #endgame-report h1, #endgame-report h2, #endgame-report h3 {
@@ -36,10 +40,16 @@
 	vertical-align: top;
 	padding-left: 20px;
 	padding-right: 20px;
-	max-height: 60vh;
-	overflow-y: scroll;
+	max-height: 100%;
+	overflow-y: auto;
 }
 
 #right-content:empty {
 	display: none;
+}
+
+p {
+	text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow-x: hidden;
 }
