Login and signup form loader fix, notification box can be dismissed by clicking on it

--- a/src/components/LoginSignupForm.css
+++ b/src/components/LoginSignupForm.css
@@ -58,3 +58,10 @@
   outline: none;
   border-color: var(--jd-yellow);
 }
+
+.login-loader {
+  height: 60px;
+  width: 80px;
+  margin: auto;
+  position: relative;
+}
