--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -1,4 +1,4 @@
-.loader {
+.Loader {
   height: 50px;
   width: 50px;
   position: absolute;
@@ -7,7 +7,7 @@
   z-index: 1;
 }
 
-.loader span {
+.Loader span {
   background: var(--jd-gray);
   box-shadow: 1px 2px 3px #999;
   height: 10px;
@@ -17,22 +17,56 @@
   margin: 5px;
   animation: loading .8s ease infinite;
   opacity: 0.1;
-}  
+}
 
-.loader span:nth-child(1){
+.Loader span:nth-child(1){
   animation-delay: 0;
 }
 
-.loader span:nth-child(2){
+.Loader span:nth-child(2){
   animation-delay: 300ms;
 }
 
-.loader span:nth-child(3) {
+.Loader span:nth-child(3) {
   animation-delay: 200ms;
 }
 
-.loader span:nth-child(4) {
+.Loader span:nth-child(4) {
   animation-delay: 100ms;
+}
+
+.loginsignup {
+  position: relative;
+  top: calc(50% - 12px);
+  z-index: 1;
+}
+
+.loginsignup span {
+  background: var(--jd-gray);
+  box-shadow: 1px 2px 3px #999;
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  border-radius: 50%;
+  margin: 5px;
+  animation: loading .8s ease infinite;
+  opacity: 0.1;
+}
+
+.loginsignup span:nth-child(1){
+  animation-delay: 0;
+}
+
+.loginsignup span:nth-child(2){
+  animation-delay: 100ms;
+}
+
+.loginsignup span:nth-child(3) {
+  animation-delay: 200ms;
+}
+
+.loginsignup span:nth-child(4) {
+  animation-delay: 300ms;
 }
 
 @keyframes loading {
