--- a/src/components/MapMenu.css
+++ b/src/components/MapMenu.css
@@ -297,6 +297,10 @@
   padding-top: 20px;
   padding-bottom: 20px;
 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow-x: hidden;
+
   /* Gradient background */
   background: rgba(10, 10, 10, 0.4); /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(rgba(10, 10, 10, 0.4), rgba(10, 10, 10, 0)); /* For Safari 5.1 to 6.0 */
