--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -138,3 +138,15 @@
   border: 1px solid #CECFCF;
   font-size: 1em;
 }
+
+.graphics-button {
+  height: 30px;
+  line-height: 30px;
+  width: auto;
+  box-sizing: border-box;
+  padding-left: 5px;
+  padding-right: 5px;
+  text-align: left;
+  box-shadow: none;
+  font-size: 1em;
+}
