--- a/src/components/MainMenu.css
+++ b/src/components/MainMenu.css
@@ -70,6 +70,11 @@
   margin-left: 20px;
 }
 
+#button-settings:hover {
+  cursor: pointer;
+  background-color: var(--jd-green) !important;
+}
+
 #menu-background {
   width: 100vw;
   height: 100vh;
