--- a/src/components/Report.css
+++ b/src/components/Report.css
@@ -2,7 +2,7 @@
 	float: right;
 	position: -webkit-sticky;
 	position: sticky;
-	top: 0;
+	top: 22px;
 	width: 40px;
 	height: 40px;
 	font-size: 18px;
@@ -10,14 +10,11 @@
 }
 
 #endgame-report {
-	min-width: 250px;
+	min-width: 300px;
 	float: right;
-	max-height: 100vh;
+	height: 90vh;
 	overflow-y: auto;
-}
-
-#endgame-report > * {
-	padding: 10px;
+	padding-right: 15px;
 }
 
 #endgame-report span, #report span {
@@ -48,8 +45,17 @@
 	display: none;
 }
 
-.Report p {
+.report-stat {
 	text-overflow: ellipsis;
     white-space: nowrap;
-    overflow-x: hidden;
+	overflow-x: hidden;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.report-stat span {
+	max-width: 120px;
+	text-overflow: ellipsis;
+    white-space: nowrap;
+	overflow-x: hidden;
 }
